k8s/media-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-worker
  namespace: esteira-midias
spec:
  replicas: 2 # Escalonado em HA
  selector:
    matchLabels:
      app: media-worker
  template:
    metadata:
      labels:
        app: media-worker
    spec:
      containers:
        - name: media-worker
          image: esteira-media-worker:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 150m
              memory: 256Mi
            limits:
              cpu: 600m
              memory: 512Mi
          volumeMounts:
            - name: armazenamento-temporario
              mountPath: /app/armazenamento_temporario
            - name: armazenamento-definitivo
              mountPath: /app/armazenamento_definitivo
      volumes:
        - name: armazenamento-temporario
          persistentVolumeClaim:
            claimName: esteira-temporario-pvc
        - name: armazenamento-definitivo
          persistentVolumeClaim:
            claimName: esteira-definitivo-pvc
