k8s/media-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-api
  namespace: esteira-midias
spec:
  replicas: 2 # Alta disponibilidade
  selector:
    matchLabels:
      app: media-api
  template:
    metadata:
      labels:
        app: media-api
    spec:
      containers:
        - name: media-api
          image: esteira-media-api:latest # Em produção seria o registry (ex: gcr.io/projeto/esteira-media-api)
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
          # Sondas de integridade operacional
          livenessProbe:
            httpGet:
              path: /api/v1/midias/status/saude
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/v1/midias/status/saude
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: armazenamento-temporario
              mountPath: /app/armazenamento_temporario
      volumes:
        - name: armazenamento-temporario
          persistentVolumeClaim:
            claimName: esteira-temporario-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: media-api-service
  namespace: esteira-midias
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: media-api
